# rust-mvc

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  docker-compose.yml  podman.sh
cross/: Dockerfile
migrations/2021-01-29-144432_create_customers/: up.sql
src/: main.rs  schema.rs
src/controllers/: frontend.rs
src/controllers/backend/: customers.rs
src/handlers/: frontend.rs  mod.rs
src/handlers/backend/: customers.rs
src/models/: customer.rs
src/routes/: backend.rs  frontend.rs
static/: error500.html
templates/backend/: layout.html  menu.html
templates/backend/customers/: index.html  new.html
web/: package.json  webpack.config.js
web/src/: index.js
