[package]
name = "rust-mvc"
version = "0.1.0"
authors = ["Patrice André <mail@patriceandre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
askama = "0.8"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger="0.8.2"
log = "0.4.0"

