[package]
name = "rust-mvc"
version = "0.1.0"
authors = ["Patrice André <mail@patriceandre.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-static-files = "3.0"
askama = "0.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger="0.8.2"
log = "0.4.0"
r2d2 = "0.8.9"
# r2d2_postgres = "0.18.0"
serde = "1.0.123"

[build-dependencies]
actix-web-static-files = "3.0"

